--- a/Day5/数据库笔记.md
+++ b/Day5/数据库笔记.md
@@ -29,3 +29,243 @@
 对于开发人员，需要安装MySQL Server和MySQL Workbench这两个软件
 - MySQL Server：专门用来提供数据存储和服务的软件；
 - MySQL Workbench：可视化的MySQL管理工具，通过它，可以方便的操作存储在MySQL Server中的数据。
+
+## 使用MySQL Workbench管理数据库
+DataType数据类型：
+1. int整数；
+2. varchar(len) 字符串  例如，varchar(45)，不超过45个字符的字符串；
+3. tinyint(1) 布尔值
+
+字段的特殊标识：
+1. PK(Primary Key)主键，唯一标识；
+2. NN(Not Null) 值不允许为空；
+3. UQ(Unique) 值唯一；
+4. AI(Auto Increment) 值自动增长
+
+## 什么是SQL
+SQL（英文全称：Structured Query Language）是结构化查询语言，专门用来访问和处理数据库的编程语言，能够让我们以编程的形式，操作数据库里面的数据。
+三个关键点：
+1. SQL是一门数据库编程语言；
+2. 使用SQL语言编写处理的代码，叫做SQL语句；
+3. SQL语言只能在关系型数据库中使用（例如MySQL，Oracle，SQL Server）
+
+SQL能做什么呢？
+查询数据（select）
+插入数据（insert into）
+更新数据（update）
+删除数据（delete）
+需要掌握的4中SQL语法：
+where条件，and和or运算符，order by排序，count(*)函数
+
+
+### SELECT语句
+SELECT语句用于从表中查询数据，执行的结果被存储在一个结果表中（称为结果集）。语法格式如下：
+-- 这是注释
+-- 从 FROM 指定的表中，查询处 所有的数据。 * 表示 所有列
+SELECT * FROM 表名称
+
+-- 从 FROM 指定的表中，查询指定 列名称（字段）
+SELECT 列名称 FROM 表名称
+SELECT username,password FROM new_db_01.users;
+
+SQL语句的关键字如SELECT，FROM对大小写不敏感。
+SELECT和 select等价的。
+
+### INSERT INTO语句
+INSERT INTO语句用于向数据表中插入新的数据行，语法格式如下：
+INSERT INTO table_name(列1,列2,列3... ) VALUES (值1,值2,值3,... )
+
+### update语句
+update 表名 set 列名= 新值  where 某一个列名= 值
+更新某一行中的一个列
+update users set password='888888' where id=2
+更新某一行中的多个列
+update users set password='123456',status=1 where id=1
+
+
+### DELETE语句
+删除users表中的id=3的那一行数据。
+DELETE FROM users where id=3
+
+### where子句
+-- 查询status为1的所有用户
+SELECT * FROM users where status=1
+
+-- 查询id 大于2的所有用户
+SELECT * FROM users where id>2
+
+-- 查询username 不等于admin的所用用户
+SELECT * FROM users where username <> "tony"
+
+### and语句
+and 表示两个条件要同时成立
+SELECT * FROM users where status=0 and id<3
+
+### or语句
+or 表示两个条件成立一个就可以了
+SELECT * FROM users where status=1 or id>3
+
+
+### order子句
+升序排序
+根据status数值对users表进行升序排序
+SELECT * FROM users order by status
+或 SELECT * FROM users order by status asc
+
+降序排序
+根据status数值对users表进行降序排序
+SELECT * FROM users order by status desc
+根据id数值对users表进行降序排序
+SELECT * FROM users order by id desc
+
+注意： asc或者默认是升序排序，
+desc表示降序排序。
+
+多重排序
+先按照status进行升序排序，再按照id进行降序排序
+SELECT * FROM users order by status asc,id desc
+
+### count(*)语句
+select count(*) from users where status=0
+
+### as关键字
+使用as关键字 给列起别名
+select count(*) as total12 from users where status=0
+select username as uname,password as upwd FROM users
+
+## 在项目中操作数据库的步骤
+1. 安装操作MySQL数据库的第三方模块（mysql）
+2. 通过mysql模块连接到MySQL数据库
+3. 通过mysql模块执行SQL语句
+
+### 插入数据的普通方式
+```js
+    // 查询users表中的所有数据
+    const sqlStr='insert into users(username,password) values (?,?)'
+
+    // 向users表中，新增一条数据，其中username的值为Spider-Man，password的值为pcc123.
+    const user={username:'Spider-Man',password:'pcc123'}
+    // 执行SQL语句
+    db.query(sqlStr,[user.username,user.password],(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是insert into插入语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否插入数据成功
+    if(results.affectedRows==1){
+        console.log('插入数据成功');
+    } 
+})
+```
+
+### 插入数据的快捷方式
+如果数据对象的每一个属性和数据表的字段一一对应，数据对象user中的username和数据表中的字段名称一致，
+则可以通过如下方式快速插入数据:
+```js
+    // 待执行的SQL语句，其中英文的?表示占位符
+    const sqlStr='insert into users set ?';
+
+    // 向users表中插入的数据
+    const user={username:'Spider-Man2',password:'pcc654321'};
+    // 执行SQL语句
+    db.query(sqlStr,user,(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是insert into插入语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否插入数据成功
+    if(results.affectedRows==1){
+        console.log('插入数据成功');
+    }
+    
+})
+```
+
+### 更新数据
+```js
+
+    // 需要更新的用户信息
+    const user={id:6,username:'aaa',password:'000'}
+
+    // 定义SQL语句
+    const sqlStr='update users set username=?,password=? where id=?'
+
+
+    // 执行SQL语句
+    db.query(sqlStr,[user.username,user.password,user.id],(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是update语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否更新数据成功
+    if(results.affectedRows==1){
+        console.log('更新数据成功');
+    }
+})
+```
+
+### 更新数据的快捷方式
+```js
+    // 需要更新的用户信息
+    const user={id:7,username:'bbb',password:'111'}
+
+    // 定义SQL语句
+    const sqlStr='update users set ? where id=?'
+
+    // 执行SQL语句
+    db.query(sqlStr,[user,user.id],(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是update语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否更新数据成功
+    if(results.affectedRows==1){
+        console.log('更新数据成功');
+    }
+    })
+```
+
+### 删除数据
+```js
+    // 定义SQL语句
+    const sqlStr='delete from users where id=?'
+
+    // 执行SQL语句
+    // 执行SQL语句中如果有多个占位符，则必须使用数组为每个占位符指定具体的值；
+    // 如果SQL语句只要一个占位符，则可以省略数组，直接写一个值。
+    db.query(sqlStr,6,(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是delete语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否更新数据成功
+    if(results.affectedRows==1){
+        console.log('删除数据成功');
+    }  
+})
+
+```
+
+### 标记删除
+所谓的标记删除，就是在表中设置类似于status这样的状态字段，来标记当前这条数据是否被删除。
+当用户执行了删除的动作时，我们并没有执行DELETE语句把数据删除掉，而是执行了UPDATE语句，将这条数据对应的status字段标记为删除即可。
+```js
+db.query('UPDATE USERS SET status=1 where id=?',6,(err,results)=>{
+    // mysql 模块工作期间报错了
+    if(err) return console.log(err.message)
+
+    // 能够成功的执行SQL语句
+    // 注意：如果执行的是delete语句，则result是一个对象
+    // 可以通过 results.affectedRows属性，来判断是否更新数据成功
+    if(results.affectedRows==1){
+        console.log('删除数据成功');
+    } 
+})
+```
+
+
